--- a/requirements.txt
+++ b/requirements.txt
@@ -27,14 +27,16 @@ mpmath==1.3.0
 narwhals==1.30.0
 networkx==3.4.2
 numpy==1.23.3
+opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
-protobuf==4.23.4
+protobuf==5.29.3
 psutil==7.0.0
 py-cpuinfo==9.0.0
+pyarrow==19.0.1
 pydeck==0.9.1
 pymongo==4.13.0
 pyparsing==3.2.3
@@ -57,6 +59,9 @@ sympy==1.14.0
 tenacity==9.0.0
 threadpoolctl==3.5.0
 toml==0.10.2
+torch==2.2.2+cpu
+torchaudio==2.2.2
+torchvision==0.17.2+cpu
 tornado==6.4.2
 tqdm==4.67.1
 typing_extensions==4.12.2
