--- a/requirements.txt
+++ b/requirements.txt
@@ -59,14 +59,8 @@ sympy==1.14.0
 tenacity==9.0.0
 threadpoolctl==3.5.0
 toml==0.10.2
-torch==2.2.2+cpu
-torchaudio==2.2.2
-torchvision==0.17.2+cpu
+torch==2.3.0
+torchaudio==2.3.0
+torchvision==0.18.0
 tornado==6.4.2
-tqdm==4.67.1
-typing_extensions==4.12.2
-tzdata==2025.1
-ultralytics==8.3.113
-ultralytics-thop==2.0.14
-urllib3==2.3.0
-watchdog==6.0.0
+tqdm==4.6
