--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ matplotlib==3.10.1
 mpmath==1.3.0
 narwhals==1.30.0
 networkx==3.4.2
-numpy==1.23.3
+numpy>=1.24,<1.27
 opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
