--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ mpmath==1.3.0
 narwhals==1.30.0
 networkx==3.4.2
 numpy>=1.24,<1.27
+opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
 packaging==24.2
