--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,7 @@ matplotlib==3.10.1
 mpmath==1.3.0
 narwhals==1.30.0
 networkx==3.4.2
-numpy==1.23.3
-opencv-python==4.11.0.86
+numpy>=1.24,<1.27
 opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
 packaging==24.2
@@ -48,7 +47,7 @@ referencing==0.36.2
 requests==2.32.3
 rpds-py==0.23.1
 scikit-learn==1.6.1
-scipy==1.9.1
+scipy==1.10.1
 seaborn==0.13.2
 six==1.17.0
 smmap==5.0.2
@@ -59,14 +58,8 @@ sympy==1.14.0
 tenacity==9.0.0
 threadpoolctl==3.5.0
 toml==0.10.2
-torch==2.2.2+cpu
-torchaudio==2.2.2
-torchvision==0.17.2+cpu
+torch==2.3.0
+torchaudio==2.3.0
+torchvision==0.18.0
 tornado==6.4.2
 tqdm==4.67.1
-typing_extensions==4.12.2
-tzdata==2025.1
-ultralytics==8.3.113
-ultralytics-thop==2.0.14
-urllib3==2.3.0
-watchdog==6.0.0
