--- a/requirements.txt
+++ b/requirements.txt
@@ -63,3 +63,6 @@ torchaudio==2.3.0
 torchvision==0.18.0
 tornado==6.4.2
 tqdm==4.67.1
+ultralytics==8.3.113
+ultralytics-thop==2.0.14
+urllib3==2.3.0
