--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,3 +2,5 @@
 runOnSave = false
 [browser]
 gatherUsageStats = false
+[server]
+folderWatchBlacklist = ["venv", "__pycache__", ".git", "node_modules", ".mypy_cache"]
