--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,4 +1,5 @@
 [server]
 runOnSave = false
+folderWatchBlacklist = ["venv", "__pycache__", "node_modules", ".git"]
 [browser]
 gatherUsageStats = false
